@@ -52,11 +52,11 @@ class PositionResolver
 
         # check for cached values (to avoid too many external request)
         cached = get_cache params
-        if cached
-          trace :debug, "Positioning: resolved from cache #{cached.inspect}"
-          StatsManager.instance.add gapi_cache: 1
-          return cached
-        end
+        #if cached
+        #  trace :debug, "Positioning: resolved from cache #{cached.inspect}"
+        #  StatsManager.instance.add gapi_cache: 1
+        #  return cached
+        #end
 
         location = {}
 
@@ -180,8 +180,8 @@ class PositionResolver
 
     def daily_limit_reset
       @@daily_requests = 0
-      now = Time.now.strftime("%d%Y%m")
-      File.open(RCS::DB::Config.instance.file('gapi'), "w") {|f| f.write now + "0"}
+      @@last_request = Time.now.strftime("%d%Y%m")
+      File.open(RCS::DB::Config.instance.file('gapi'), "w") {|f| f.write @@last_request + "0"}
     end
 
     def daily_limit_consume
@@ -194,7 +194,7 @@ class PositionResolver
     end
 
     def daily_limit_reached?
-      trace :debug, "request (#{@@daily_requests}/#{daily_limit})"
+      trace :info, "Google API request (#{@@daily_requests}/#{daily_limit})"
       @@daily_requests > daily_limit
     end
 
